--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ Banner text!
 ### **About**
 
 ```{r, echo = FALSE, results = 'asis'}
-cow::borrow_chapter("03-using-containers.qmd",
+ottrpal::borrow_chapter("03-using-containers.qmd",
                 repo = "fhdsl/Containers_for_Scientists",
                 remove_h1 = TRUE)
 ```
